IP2007 普及组] 纪念品分组

--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,8 @@
 # Code Runner - Visual Studio Code Plugin
 *tempCodeRunnerFile*
 
-#ntfs-3g / fuse
+# ntfs-3g / fuse
 .fuse*
+
+# Competitive Programming Helper Extensions for VS Code
+.cph/
